# combaters

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: release.yml
combaters/: __init__.py  __init__.pyi
crates/combaters-core/: Cargo.toml
crates/combaters-core/src/: adjust.rs  api.rs  batch.rs  dense.rs  design.rs  error.rs  layout.rs  lib.rs  nonparametric.rs  parallel.rs  parametric.rs  standardize.rs  zero_variance.rs
crates/combaters-core/tests/: dense_contract.rs  dense_parametric.rs  oracle_first_fixture.rs
crates/combaters-core/tests/support/: mod.rs
docs/superpowers/plans/: 2026-04-24-numpy-buffer-api.md
oracle/: environment.yml  generate_fixtures.R
oracle/fixtures/balanced_two_batch_parametric/: batch.csv  expected_samples_x_features.csv  input_samples_x_features.csv  manifest.toml  sessionInfo.txt
shared_test_results/: accuracy_sample.json  bladderbatch_report.json  param_diff_report.md  performance.json
src/: lib.rs
tests/python/: test_binding_contract.py  test_ecosystem_api.py  test_numpy_api.py
