[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "combaters"
version = "0.1.0"
description = "Rust-backed ComBat batch-effect correction for dense biological matrices"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = ["numpy>=1.23"]
license = "MIT"
authors = [{ name = "ShenShang" }]
keywords = ["bioinformatics", "batch-effect-correction", "combat", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
ecosystem = ["pandas>=1.5", "scipy>=1.9"]
test = ["pytest>=7", "pandas>=1.5", "scipy>=1.9"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "combaters._combaters"
